| Summary: | ASTERISK-28939: res_rtp_asterisk: Don't have send/receive buffers on non-WebRTC | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | webrtc |
| Date Opened: | 2020-06-08 06:22:17 | Date Closed: | 2020-06-11 18:02:31 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 16.10.0 17.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The send and receive buffer prop in res_rtp_asterisk does not examine the value to know if they should be enabled or not. It should. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2020-06-11 18:02:33.139-0500 Change 14530 merged by Friendly Automation: res_rtp_asterisk: Don't assume setting retrans props means to enable. [https://gerrit.asterisk.org/c/asterisk/+/14530|https://gerrit.asterisk.org/c/asterisk/+/14530] By: Friendly Automation (friendly-automation) 2020-06-11 18:06:07.791-0500 Change 14532 merged by Friendly Automation: res_rtp_asterisk: Don't assume setting retrans props means to enable. [https://gerrit.asterisk.org/c/asterisk/+/14532|https://gerrit.asterisk.org/c/asterisk/+/14532] By: Friendly Automation (friendly-automation) 2020-06-11 18:08:05.324-0500 Change 14507 merged by Friendly Automation: res_rtp_asterisk: Don't assume setting retrans props means to enable. [https://gerrit.asterisk.org/c/asterisk/+/14507|https://gerrit.asterisk.org/c/asterisk/+/14507] By: Friendly Automation (friendly-automation) 2020-06-12 03:44:00.576-0500 Change 14531 merged by Joshua Colp: res_rtp_asterisk: Don't assume setting retrans props means to enable. [https://gerrit.asterisk.org/c/asterisk/+/14531|https://gerrit.asterisk.org/c/asterisk/+/14531] | ||